# OOP_Group10

./: AybukeKaracavus.txt  CMakeLists.txt  Cart.cpp  Cart.h  Customer.cpp  DataLoader.cpp  DataLoader.h  Discount.cpp  Discount.h  MakeFile  MurathanKarakaya.txt  Observer.cpp  OzgurDemirbas.txt  Product.cpp  Product.h  README.md  Seller.cpp  Seller.h  SemaNurYılmaz.txt  SessionManager.cpp  Shipment.h  SılaDolas.txt  Wishlist.cpp  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  order.cpp  order.h  orderwindow.cpp  orderwindow.h
codes/: AuthenticationManager.cpp  AuthenticationManager.h  Category.cpp  Category.h  Customer.cpp  Customer.h  MakeFile  NotificationManager.cpp  NotificationManager.h  Observer.h  Order.cpp  Order.h  PasswordManager.cpp  PasswordManager.h  Product.cpp  Seller.cpp  Seller.h  SessionManager.h  Shipment.cpp  User.cpp  User.h  Wishlist.h  customers.txt  main.cpp  order.cpp  order.h  sellers.txt
gui/: CMakeLists.txt  Customer.cpp  Customer.h  Product.cpp  Product.h  User.cpp  User.h  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderwindow.cpp  orderwindow.h  orderwindow.ui
gui_v2/: CMakeLists.txt  CMakeLists.txt.user.664bc1b  Customer.cpp  Customer.h  Product.cpp  Product.h  User.cpp  User.h  customer.txt  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui_v2/exe/: customer.txt
